@@ -41,8 +41,6 @@ import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -91,15 +89,15 @@ public class GcpSecretManagerParameterProvider extends AbstractParameterProvider
 
     private static final String GROUP_NAME_LABEL = "group-name";
     private static final String SECRETS_PATH = "secrets/";
-    private static final List<PropertyDescriptor> PROPERTIES = Collections.unmodifiableList(Arrays.asList(
+    private static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
             GROUP_NAME_PATTERN,
             PROJECT_ID,
             GCP_CREDENTIALS_PROVIDER_SERVICE
-    ));
+    );
 
     @Override
     protected List<PropertyDescriptor> getSupportedPropertyDescriptors() {
-        return PROPERTIES;
+        return PROPERTY_DESCRIPTORS;
     }
 
     @Override
